# ADS_SE_2024-2025

./: .gitignore  .gitignore.txt
SET09/: CMakeLists.txt
SET09/A1/: pars.py  results.csv  sortingAlgorithms.hpp
SET09/A1m/: main.cpp
SET09/P2/: main.cpp
SET09/P3/: main.cpp
SET3/: CMakeLists.txt
SET3/A1/: main.cpp
SET3/A1/results/: results.csv
SET3/A2/: ArrayGenerator.hpp  SortTester.hpp  Sorts.hpp  main.cpp
SET3/A2/results/: sort_results_NearlySorted_HybridSort_Threshold10.csv  sort_results_NearlySorted_HybridSort_Threshold100.csv  sort_results_NearlySorted_HybridSort_Threshold20.csv  sort_results_NearlySorted_HybridSort_Threshold30.csv  sort_results_NearlySorted_HybridSort_Threshold5.csv  sort_results_NearlySorted_HybridSort_Threshold50.csv  sort_results_NearlySorted_MergeSort_Threshold10.csv  sort_results_NearlySorted_MergeSort_Threshold100.csv  sort_results_NearlySorted_MergeSort_Threshold20.csv  sort_results_NearlySorted_MergeSort_Threshold30.csv  sort_results_NearlySorted_MergeSort_Threshold5.csv  sort_results_NearlySorted_MergeSort_Threshold50.csv  sort_results_Random_HybridSort_Threshold10.csv  sort_results_Random_HybridSort_Threshold100.csv  sort_results_Random_HybridSort_Threshold20.csv  sort_results_Random_HybridSort_Threshold30.csv  sort_results_Random_HybridSort_Threshold5.csv  sort_results_Random_HybridSort_Threshold50.csv  sort_results_Random_MergeSort_Threshold10.csv  sort_results_Random_MergeSort_Threshold100.csv  (+16 more)
SET3/A3/: SortTester.hpp  Sorts.hpp  main.cpp
SET3/P3/: main.cpp
SET3/P5/: main.cpp
SET3/P6/: main.cpp
SET6/A1/: A1.md
(+142 files in other folders)
